完成登陆 注册界面

--- a/views/index.html
+++ b/views/index.html
@@ -19,6 +19,7 @@
                             <p class="help-block">Use password: 123456</p>
                         </div>
                         <button type="submit" class="btn btn-primary">Sign In</button>
+                        <a href="/login" target="_blank">login_another</a>
                     </form>
                 </div>
             </div>
