--- a/views/base.html
+++ b/views/base.html
@@ -7,6 +7,7 @@
     <meta name="description" content="learn javascript by www.liaoxuefeng.com">
     <title>{{ title }}</title>
     <link rel="stylesheet" href="/static/css/bootstrap.css">
+    <script src="./static/js/jquery.js" type="text/javascript" charset="utf-8"></script>
     <script src="/static/js/bootstrap.js"></script>
 </head>
 
