--- a/views/addBook.html
+++ b/views/addBook.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/static/css/bootstrap.css">
     <script src="./static/js/jquery.js" type="text/javascript" charset="utf-8"></script>
     <script src="/static/js/bootstrap.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <style type="text/css">
     body {
         position: relative;
@@ -30,30 +31,46 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title">
-                <span class="glyphicon glyphicon-user"></span> 请登录
+                <span class="glyphicon glyphicon-user"></span> 添加图书
                 <a href="#" onclick="javascript :history.back(-1);" style="float: right;"><p>X</p></a>
                 </h3>
             </div>
             <div class="panel-body">
-                <form action="/signin" method="post">
+                <div>
                     <div class="form-group">
-                        <label>用户名</label>
-                        <input type="email" name="email" class="form-control" placeholder="Email">
-                        <p class="help-block">用户名: admin@example.com</p>
+                        <label>图书名</label>
+                        <input type="text" name="bookname" class="form-control" placeholder="请输入图书名">
                     </div>
                     <div class="form-group">
-                        <label>密码</label>
-                        <input type="password" name="password" class="form-control" placeholder="Password">
-                        <p class="help-block">密码: 123456</p>
+                        <label>作者</label>
+                        <input type="text" name="author" class="form-control" placeholder="请输入作者">
+                    </div>
+                    <div class="form-group">
+                        <label>类别</label>
+                        <input type="text" name="classification" class="form-control" placeholder="请输入类别名">
                     </div>
                     <div>
-                        <button type="submit" class="btn btn-primary">登陆</button>
-                        <a id="login-cancel" type="text" class="btn btn-primary" href="/register">注册</a>
+                        <button type="text" class="btn btn-primary" onclick="add_books()">上架</button>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
 </body>
+<script type="text/javascript">
+function add_books() {
+    axios.post('/add', {
+            bookname: $("input[name='bookname']").val(),
+            author: $("input[name='author']").val(),
+            classification: $("input[name='classification']").val()
+        })
+        .then(function(response) {
+            console.log(response.data.result);
+        })
+        .catch(function(error) {
+            console.log(error);
+        });
+}
+</script>
 
 </html>
