--- a/views/index.html
+++ b/views/index.html
@@ -1,81 +1,124 @@
 {% extends "base.html" %} {% block main %}
-<div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title"><span class="glyphicon glyphicon-user"></span> Please sign in</h3>
-                </div>
-                <div class="panel-body">
-                    <form action="/signin" method="post">
-                        <div class="form-group">
-                            <label>Email address</label>
-                            <input type="email" name="email" class="form-control" placeholder="Email">
-                            <p class="help-block">Use email: admin@example.com</p>
-                        </div>
-                        <div class="form-group">
-                            <label>Password</label>
-                            <input type="password" name="password" class="form-control" placeholder="Password">
-                            <p class="help-block">Use password: 123456</p>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Sign In</button>
-                        <a href="/login" target="_blank">login_another</a>
-                    </form>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title"><span class="glyphicon glyphicon-hd-video"></span> Video training</h3>
-                </div>
-                <div class="panel-body">
-                    <video width="100%" controls="controls">
-                        <source src="https://github.com/michaelliao/learn-javascript/raw/master/video/vscode-nodejs.mp4">
-                    </video>
+<div id="important" style="color:#cdbfe3; background-color:#fff; padding:30px 0; margin:20px 0 20px 0;">
+        <div style="width:1200px;margin-right: auto;margin-left: auto;position: relative;zoom:1">
+            <img src="./static/img/logo.jpg" style="margin: 0 184px 0 0;float: left;" />
+            <form action="/search" style="float: left;margin: 0 auto;text-align: center;padding: 15px 0;">
+                <input id="search" type="text" name="search" class="search-box float-left" placeholder="搜索小说" />
+                <input class="float-left search-btn" type="submit" id="searchSubmit" value="搜索" />
+            </form>
+            <div class="mybook-div" id="mybook-div">
+                <div class="center-div">
+                    <a href="" target="_blank">
+                        <label>我的书架</label>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <h1>Get more courses...</h1>
+    </br>
+    <div style="width:1200px;margin-right: auto;margin-left: auto;">
+        <div class="classification-div">
+            <table border="1" class="classification-table">
+                <tr>
+                    <td>
+                        <a href="" style="width: 100%;height: 100%;text-align: center">
+                            <table>玄幻</table>
+                        </a>
+                    </td>
+                    <td>
+                        <a href="" style="width: 100%;height: 100%;text-align: center">
+                            <table>奇幻</table>
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="" style="width: 100%;height: 100%;text-align: center">
+                            <table>武侠</table>
+                        </a>
+                    </td>
+                    <td>
+                        <a href="" style="width: 100%;height: 100%;text-align: center">
+                            <table>仙侠</table>
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="" style="width: 100%;height: 100%;text-align: center">
+                            <table>都市</table>
+                        </a>
+                    </td>
+                    <td>
+                        <a href="" style="width: 100%;height: 100%;text-align: center">
+                            <table>职场</table>
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="" style="width: 100%;height: 100%;text-align: center">
+                            <table>军事</table>
+                        </a>
+                    </td>
+                    <td>
+                        <a href="" style="width: 100%;height: 100%;text-align: center">
+                            <table>历史</table>
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="" style="width: 100%;height: 100%;text-align: center">
+                            <table>游戏</table>
+                        </a>
+                    </td>
+                    <td>
+                        <a href="" style="width: 100%;height: 100%;text-align: center">
+                            <table>体育</table>
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="" style="width: 100%;height: 100%;text-align: center">
+                            <table>科幻</table>
+                        </a>
+                    </td>
+                    <td>
+                        <a href="" style="width: 100%;height: 100%;text-align: center">
+                            <table>灵异</table>
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="" style="width: 100%;height: 100%;text-align: center">
+                            <table>女生网</table>
+                        </a>
+                    </td>
+                    <td>
+                        <a href="" style="width: 100%;height: 100%;text-align: center">
+                            <table>二次元</table>
+                        </a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="adimage-div">
+            <img src="./static/img/ad_bg.jpg" />
+        </div>
+        <div class="hot-recommendation">
+            <ul>
+                <h3>热门推荐</h3>
+                <li><a href="">haoshu</a></li>
+                <li><a href="">haoshu</a></li>
+                <li><a href="">haoshu</a></li>
+                <li><a href="">haoshu</a></li>
+                <li><a href="">haoshu</a></li>
+                <li><a href="">haoshu</a></li>
+                <li><a href="">haoshu</a></li>
+            </ul>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">JavaScript</h3>
-                </div>
-                <div class="panel-body">
-                    <p>full-stack JavaScript course</p>
-                    <p><a target="_blank" href="http://www.liaoxuefeng.com/wiki/001434446689867b27157e896e74d51a89c25cc8b43bdb3000">Read more</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Python</h3>
-                </div>
-                <div class="panel-body">
-                    <p>the latest Python course</p>
-                    <p><a target="_blank" href="http://www.liaoxuefeng.com/wiki/0014316089557264a6b348958f449949df42a6d3a2e542c000">Read more</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">git</h3>
-                </div>
-                <div class="panel-body">
-                    <p>A course about git version control</p>
-                    <p><a target="_blank" href="http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000">Read more</a></p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 {% endblock %}
