--- a/views/base.html
+++ b/views/base.html
@@ -12,22 +12,28 @@
     <script src="/static/js/bootstrap.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/css/mycss.css">
     <link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/font-awesome.4.6.0.css">
+    <script type="text/javascript" src="/static/js/jquery.cookie.js"></script> 
+    <script type="text/javascript">
+        $(document).ready(function() {
+            //初始化代码
+            var isLogin = {{isLogin}};
+            var isAuthor = {{isAuthor}};
+            if (isLogin) {
+                console.log('islogin');
+                $('#login').text('退出登陆');
+                $('#login').attr('href','/exit');
+                $('#register').remove();
+                if (!isAuthor) {
+                    $('#add_book').remove();
+                }
+            }else{
+                console.log('isnt login');
+            }
+        });
+    </script>
 </head>
 
 <body>
-    <header class="navbar navbar-static-top" style="background: #F7F7F7;">
-        <div class="container">
-            <nav class="collapse navbar-collapse" id="bs-navbar">
-                <ul class="nav navbar-nav">
-                    <li><a href="#">起飞小说网</a></li>
-                    <li><a target="_blank" href="/collect">收藏</a></li>
-                    <li><a id="login" name="login" href="/login">登陆</a></li>
-                    <li><a id="register" name="register" href="/register">注册</a></li>
-                    <li><a id="add_book" name="addBook" href="/add_book">上架图书</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
     {% block main %} {% endblock %}
     <!-- <footer style="background-color:#ddd; padding: 20px 0;">
         <div class="container">
