--- a/views/index.html
+++ b/views/index.html
@@ -1,124 +1,154 @@
 {% extends "base.html" %} {% block main %}
+<header class="navbar navbar-static-top" style="background: #F7F7F7;">
+    <div class="container">
+        <nav class="collapse navbar-collapse" id="bs-navbar">
+            <ul class="nav navbar-nav">
+                <li><a href="#">起飞小说网</a></li>
+                <li><a target="_blank" href="/collect">收藏</a></li>
+                <li><a id="login" name="login" href="/login">登陆</a></li>
+                <li><a id="register" name="register" href="/register">注册</a></li>
+                <li><a id="add_book" name="addBook" href="/add_book">上架图书</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 <div id="important" style="color:#cdbfe3; background-color:#fff; padding:30px 0; margin:20px 0 20px 0;">
-        <div style="width:1200px;margin-right: auto;margin-left: auto;position: relative;zoom:1">
-            <img src="./static/img/logo.jpg" style="margin: 0 184px 0 0;float: left;" />
-            <form action="/search" style="float: left;margin: 0 auto;text-align: center;padding: 15px 0;">
-                <input id="search" type="text" name="search" class="search-box float-left" placeholder="搜索小说" />
-                <input class="float-left search-btn" type="submit" id="searchSubmit" value="搜索" />
-            </form>
-            <div class="mybook-div" id="mybook-div">
-                <div class="center-div">
-                    <a href="" target="_blank">
-                        <label>我的书架</label>
-                    </a>
-                </div>
+    <div style="width:1200px;margin-right: auto;margin-left: auto;position: relative;zoom:1">
+        <img src="./static/img/logo.jpg" style="margin: 0 184px 0 0;float: left;" />
+        <form action="/search" style="float: left;margin: 0 auto;text-align: center;padding: 15px 0;">
+            <input id="search" type="text" name="search" class="search-box float-left" placeholder="搜索小说" />
+            <input class="float-left search-btn" type="submit" id="searchSubmit" value="搜索" />
+        </form>
+        <div class="mybook-div" id="mybook-div">
+            <div class="center-div">
+                <a href="" target="_blank">
+                    <label>我的书架</label>
+                </a>
             </div>
         </div>
     </div>
-    </br>
-    <div style="width:1200px;margin-right: auto;margin-left: auto;">
-        <div class="classification-div">
-            <table border="1" class="classification-table">
-                <tr>
-                    <td>
-                        <a href="" style="width: 100%;height: 100%;text-align: center">
-                            <table>玄幻</table>
-                        </a>
-                    </td>
-                    <td>
-                        <a href="" style="width: 100%;height: 100%;text-align: center">
-                            <table>奇幻</table>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href="" style="width: 100%;height: 100%;text-align: center">
-                            <table>武侠</table>
-                        </a>
-                    </td>
-                    <td>
-                        <a href="" style="width: 100%;height: 100%;text-align: center">
-                            <table>仙侠</table>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href="" style="width: 100%;height: 100%;text-align: center">
-                            <table>都市</table>
-                        </a>
-                    </td>
-                    <td>
-                        <a href="" style="width: 100%;height: 100%;text-align: center">
-                            <table>职场</table>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href="" style="width: 100%;height: 100%;text-align: center">
-                            <table>军事</table>
-                        </a>
-                    </td>
-                    <td>
-                        <a href="" style="width: 100%;height: 100%;text-align: center">
-                            <table>历史</table>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href="" style="width: 100%;height: 100%;text-align: center">
-                            <table>游戏</table>
-                        </a>
-                    </td>
-                    <td>
-                        <a href="" style="width: 100%;height: 100%;text-align: center">
-                            <table>体育</table>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href="" style="width: 100%;height: 100%;text-align: center">
-                            <table>科幻</table>
-                        </a>
-                    </td>
-                    <td>
-                        <a href="" style="width: 100%;height: 100%;text-align: center">
-                            <table>灵异</table>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href="" style="width: 100%;height: 100%;text-align: center">
-                            <table>女生网</table>
-                        </a>
-                    </td>
-                    <td>
-                        <a href="" style="width: 100%;height: 100%;text-align: center">
-                            <table>二次元</table>
-                        </a>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <div class="adimage-div">
-            <img src="./static/img/ad_bg.jpg" />
-        </div>
-        <div class="hot-recommendation">
-            <ul>
-                <h3>热门推荐</h3>
-                <li><a href="">haoshu</a></li>
-                <li><a href="">haoshu</a></li>
-                <li><a href="">haoshu</a></li>
-                <li><a href="">haoshu</a></li>
-                <li><a href="">haoshu</a></li>
-                <li><a href="">haoshu</a></li>
-                <li><a href="">haoshu</a></li>
-            </ul>
-        </div>
+</div>
+</br>
+<div style="width:1200px;margin-right: auto;margin-left: auto;">
+    <div class="classification-div">
+        <table border="1" class="classification-table">
+            <tr>
+                <td>
+                    <a href="/classification" style="width: 100%;height: 100%;text-align: center" attr="玄幻">
+                        玄幻
+                    </a>
+                </td>
+                <td>
+                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                        <table>奇幻</table>
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                        <table>武侠</table>
+                    </a>
+                </td>
+                <td>
+                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                        <table>仙侠</table>
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                        <table>都市</table>
+                    </a>
+                </td>
+                <td>
+                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                        <table>职场</table>
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                        <table>军事</table>
+                    </a>
+                </td>
+                <td>
+                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                        <table>历史</table>
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                        <table>游戏</table>
+                    </a>
+                </td>
+                <td>
+                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                        <table>体育</table>
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                        <table>科幻</table>
+                    </a>
+                </td>
+                <td>
+                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                        <table>灵异</table>
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                        <table>女生网</table>
+                    </a>
+                </td>
+                <td>
+                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                        <table>二次元</table>
+                    </a>
+                </td>
+            </tr>
+        </table>
     </div>
+    <div class="adimage-div">
+        <img src="./static/img/ad_bg.jpg" />
+    </div>
+    <div class="hot-recommendation">
+        <ul>
+            <h3>热门推荐</h3>
+            <li><a href="">haoshu</a></li>
+            <li><a href="">haoshu</a></li>
+            <li><a href="">haoshu</a></li>
+            <li><a href="">haoshu</a></li>
+            <li><a href="">haoshu</a></li>
+            <li><a href="">haoshu</a></li>
+            <li><a href="">haoshu</a></li>
+        </ul>
+    </div>
+    <div class="book-div">
+        <table class="book-table">
+            {% for i1,i2,i3 in books %}
+            <tr>
+                {% if i1 %}
+                <td class="book-td"><a href="#">{{i1.bookName}}--{{i1.author}}</a></td>
+                {% endif %} 
+                {% if i1 %}
+                <td class="book-td"><a href="#">{{i2.bookName}}--{{i2.author}}</a></td>
+                {% endif %} 
+                {% if i1 %}
+                <td class="book-td"><a href="#">{{i3.bookName}}--{{i2.author}}</a></td>
+                {% endif %}
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+</div>
 {% endblock %}
