--- a/views/login.html
+++ b/views/login.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/static/css/bootstrap.css">
     <script src="./static/js/jquery.js" type="text/javascript" charset="utf-8"></script>
     <script src="/static/js/bootstrap.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <style type="text/css">
     body {
         position: relative;
@@ -35,25 +36,49 @@
                 </h3>
             </div>
             <div class="panel-body">
-                <form action="/signin" method="post">
+                <div>
                     <div class="form-group">
                         <label>用户名</label>
-                        <input type="email" name="email" class="form-control" placeholder="Email">
+                        <input type="email" name="email" class="form-control" placeholder="Email" required="require">
                         <p class="help-block">用户名: admin@example.com</p>
                     </div>
                     <div class="form-group">
                         <label>密码</label>
-                        <input type="password" name="password" class="form-control" placeholder="Password">
+                        <input type="password" name="password" class="form-control" placeholder="Password" required="require">
                         <p class="help-block">密码: 123456</p>
                     </div>
                     <div>
-                        <button type="submit" class="btn btn-primary">登陆</button>
+                        <button type="text" class="btn btn-primary" onclick="signin()">登陆</button>
                         <a id="login-cancel" type="text" class="btn btn-primary" href="/register">注册</a>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
 </body>
+<script type="text/javascript">
+function signin() {
+    var
+        _email = $("input[name='email']").val(),
+        _password = $("input[name='password']").val();
+    axios.post('/signin', {
+            email: _email,
+            password: _password
+        })
+        .then(function(response) {
+            console.log("result:" + response.data.result)
+            if (response.data.result == 'ok') {
+                window.location.replace('/');
+            } else {
+                 alert("登陆失败"); 
+            }
+            console.log(response);
+        })
+        .catch(function(error) {
+            console.log(error);
+            alert("登陆失败"); 
+        });
+}
+</script>
 
 </html>
