--- a/views/addBook.html
+++ b/views/addBook.html
@@ -47,7 +47,12 @@
                     </div>
                     <div class="form-group">
                         <label>类别</label>
-                        <input type="text" name="classification" class="form-control" placeholder="请输入类别名">
+                        <input type="text" name="classification" list="itemlist" class="form-control" placeholder="请输入类别名">
+                        <datalist id="itemlist">
+                            {% for i in options %}
+                            <option>{{i}}</option>
+                            {% else %} {% endfor %}}
+                        </datalist>
                     </div>
                     <div>
                         <button type="text" class="btn btn-primary" onclick="add_books()">上架</button>
@@ -66,6 +71,12 @@ function add_books() {
         })
         .then(function(response) {
             console.log(response.data.result);
+            if (response.data.result == 'ok') {
+                alert('上架成功');
+                window.location.replace('/');
+            } else {
+                alert('上架失败');
+            }
         })
         .catch(function(error) {
             console.log(error);
