--- a/views/index.html
+++ b/views/index.html
@@ -3,8 +3,7 @@
     <div class="container">
         <nav class="collapse navbar-collapse" id="bs-navbar">
             <ul class="nav navbar-nav">
-                <li><a href="#">起飞小说网</a></li>
-                <li><a target="_blank" href="/collect">收藏</a></li>
+                <li><a href="javascript:window.location.reload();">起飞小说网</a></li>
                 <li><a id="login" name="login" href="/login">登陆</a></li>
                 <li><a id="register" name="register" href="/register">注册</a></li>
                 <li><a id="add_book" name="addBook" href="/add_book">上架图书</a></li>
@@ -15,15 +14,15 @@
 <div id="important" style="color:#cdbfe3; background-color:#fff; padding:30px 0; margin:20px 0 20px 0;">
     <div style="width:1200px;margin-right: auto;margin-left: auto;position: relative;zoom:1">
         <img src="./static/img/logo.jpg" style="margin: 0 184px 0 0;float: left;" />
-        <form action="/search" style="float: left;margin: 0 auto;text-align: center;padding: 15px 0;">
-            <input id="search" type="text" name="search" class="search-box float-left" placeholder="搜索小说" />
+        <form action="/search" accept-charset="utf-8" onsubmit="document.charset='utf-8';" method="post" style="float: left;margin: 0 auto;text-align: center;padding: 15px 0;" enctype=application/x-www-form-urlencoded>
+            <input id="search" type="text" name="search" class="search-box float-left" placeholder="按名字搜索小说" />
             <input class="float-left search-btn" type="submit" id="searchSubmit" value="搜索" />
         </form>
         <div class="mybook-div" id="mybook-div">
             <div class="center-div">
-                <a href="" target="_blank">
-                    <label>我的书架</label>
-                </a>
+                <label>
+                    <a href="/collect">我的书架</a>
+                </label>
             </div>
         </div>
     </div>
@@ -34,85 +33,85 @@
         <table border="1" class="classification-table">
             <tr>
                 <td>
-                    <a href="/classification" style="width: 100%;height: 100%;text-align: center" attr="玄幻">
-                        玄幻
+                    <a href="/classification?1" style="width: 100%;height: 100%;text-align: center">
+                        <table>玄幻</table>
                     </a>
                 </td>
                 <td>
-                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                    <a href="/classification?2" style="width: 100%;height: 100%;text-align: center">
                         <table>奇幻</table>
                     </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                    <a href="/classification?3" style="width: 100%;height: 100%;text-align: center">
                         <table>武侠</table>
                     </a>
                 </td>
                 <td>
-                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                    <a href="/classification?4" style="width: 100%;height: 100%;text-align: center">
                         <table>仙侠</table>
                     </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                    <a href="/classification?5" style="width: 100%;height: 100%;text-align: center">
                         <table>都市</table>
                     </a>
                 </td>
                 <td>
-                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                    <a href="/classification?6" style="width: 100%;height: 100%;text-align: center">
                         <table>职场</table>
                     </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                    <a href="/classification?7" style="width: 100%;height: 100%;text-align: center">
                         <table>军事</table>
                     </a>
                 </td>
                 <td>
-                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                    <a href="/classification?8" style="width: 100%;height: 100%;text-align: center">
                         <table>历史</table>
                     </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                    <a href="/classification?9" style="width: 100%;height: 100%;text-align: center">
                         <table>游戏</table>
                     </a>
                 </td>
                 <td>
-                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                    <a href="/classification?10" style="width: 100%;height: 100%;text-align: center">
                         <table>体育</table>
                     </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                    <a href="/classification?11" style="width: 100%;height: 100%;text-align: center">
                         <table>科幻</table>
                     </a>
                 </td>
                 <td>
-                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
+                    <a href="/classification?12" style="width: 100%;height: 100%;text-align: center">
                         <table>灵异</table>
                     </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
-                        <table>女生网</table>
+                    <a href="/classification?13" style="width: 100%;height: 100%;text-align: center">
+                        <table>动漫</table>
                     </a>
                 </td>
                 <td>
-                    <a href="/classification" style="width: 100%;height: 100%;text-align: center">
-                        <table>二次元</table>
+                    <a href="/classification?14" style="width: 100%;height: 100%;text-align: center">
+                        <table>其他</table>
                     </a>
                 </td>
             </tr>
@@ -124,13 +123,10 @@
     <div class="hot-recommendation">
         <ul>
             <h3>热门推荐</h3>
-            <li><a href="">haoshu</a></li>
-            <li><a href="">haoshu</a></li>
-            <li><a href="">haoshu</a></li>
-            <li><a href="">haoshu</a></li>
-            <li><a href="">haoshu</a></li>
-            <li><a href="">haoshu</a></li>
-            <li><a href="">haoshu</a></li>
+            {% for i1,i2 in hot_books %}
+            <li><a href="/bookDetail?{{i1}}">{{i2}}</a></li>
+            {% else %}
+            {% endfor %}
         </ul>
     </div>
     <div class="book-div">
@@ -138,27 +134,15 @@
             {% for i1,i2,i3 in books %}
             <tr>
                 {% if i1 %}
-                <td class="book-td"><a href="/bookDetail?id={{i1.id}}"  name="{{i1.id}}">{{i1.bookName}}--{{i1.author}}</a></td>
+                <td class="book-td"><a href="/bookDetail?id={{i1.id}}" name="{{i1.id}}">{{i1.bookName}}--{{i1.author}}</a></td>
                 {% endif %} {% if i2 %}
-                <td class="book-td"><a href="/bookDetail?id={{i1.id}}" name="{{i2.id}}">{{i2.bookName}}--{{i2.author}}</a></td>
+                <td class="book-td"><a href="/bookDetail?id={{i2.id}}" name="{{i2.id}}">{{i2.bookName}}--{{i2.author}}</a></td>
                 {% endif %} {% if i3 %}
-                <td class="book-td"><a href="/bookDetail?id={{i1.id}}"  name="{{i3.id}}">{{i3.bookName}}--{{i3.author}}</a></td>
+                <td class="book-td"><a href="/bookDetail?id={{i3.id}}" name="{{i3.id}}">{{i3.bookName}}--{{i3.author}}</a></td>
                 {% endif %}
             </tr>
             {% endfor %}
         </table>
     </div>
 </div>
-<script type="text/javascript">
-function check_book(e) {
-    console.log(e.target.name);
-    axios.post('/bookDetail',{
-        bookId:e.target.name
-    }).then(function(res){
-        console.log(res.data);
-    }).catch(function(err){
-        console.log(err);
-    });
-}
-</script>
 {% endblock %}
