--- a/views/recharge.html
+++ b/views/recharge.html
@@ -77,6 +77,10 @@
                             <option>支付宝</option>
                         </datalist>
                     </div>
+                    <div class="form-group">
+                        <label>账户</label>
+                        <input id="account" type="account" name="account" class="form-control" placeholder="请输入银行账户或者支付宝账号" required="require">
+                    </div>
                     <div>
                         <button type="text" class="btn btn-primary" onclick="recharge()">充值</button>
                         <a id="login-cancel" type="text" class="btn btn-primary" href="javascript:window.location.replace('/');">取消</a>
